tests/data/motifs/bad/test_pwms_bad5.motifscan
>MA0006.1	Ahr::Arnt	PWM
bad line
